done with the chekcout page, ready to go to the backend with symfony api platform

--- a/src/components/card-dropdown/card.scss
+++ b/src/components/card-dropdown/card.scss
@@ -20,11 +20,17 @@
       height: 240px;
       display: flex;
       flex-direction: column;
-      overflow: scroll;
+      overflow: auto;
     }
   
     button {
       margin-top: auto;
     }
+  }
+
+  .to_cart_item{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
   }
   
