done with building the whole application both frontend and backend

--- a/src/routes/Shop/shop.scss
+++ b/src/routes/Shop/shop.scss
@@ -1,3 +1,7 @@
+.category-main-h2{
+    font-weight: 800;
+    font-size: 22px;
+}
 .products-container{
     display: grid;
     grid-template-columns: repeat(4 , 1fr);
